Fix word wrapping in BlurTextEffect - group chars into words with nowrap

--- a/src/components/blur_text_effect/blur_text_effect.module.css
+++ b/src/components/blur_text_effect/blur_text_effect.module.css
@@ -1,8 +1,12 @@
 .container {
+  display: inline;
+}
+
+.word {
   display: inline-block;
+  white-space: nowrap;
 }
 
 .char {
   display: inline-block;
-  white-space: pre;
 }
